# blsurfplugin

./: AUTHORS  BLSURFPLUGIN_version.h.in  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  README.txt  SalomeApprc.3.2.4  SalomeBLSURFPLUGINConfig.cmake.in  build_cmake  build_cmake.bat  build_configure  clean_configure  configure.ac  configure.in.base  env_BLSURFplugin-Src.sh  env_blsurf.sh
adm_local/: CMakeLists.txt  Makefile.am
adm_local/cmake_files/: CMakeLists.txt  FindBLSURF.cmake  FindBLSURFPLUGIN.cmake  FindCADSURF.cmake  FindMESHGEMS.cmake  FindSalomeBLSURFPLUGIN.cmake  FindSalomeMESHGEMS.cmake  Makefile.am
adm_local/unix/: CMakeLists.txt  Makefile.am  make_commence.in  make_common_starter.am
adm_local/unix/config_files/: CMakeLists.txt  Makefile.am  check_BLSURF.m4  check_BLSURFPLUGIN.m4  check_MESHGEMS_CADSURF.m4
doc/: CMakeLists.txt  Makefile.am
doc/salome/: CMakeLists.txt  Makefile.am
doc/salome/examples/: CMakeLists.txt  Makefile.am  blsurfdemo.py  examples.set  periodicity_prepro.py  test_periodicity.py  test_periodicity_precad.py  test_periodicity_reflexion_advanced.py  testme.py
doc/salome/gui/: CMakeLists.txt  Makefile.am  doxyfile.in
doc/salome/gui/BLSURFPLUGIN/: CMakeLists.txt  Makefile.am  doxyfile.in  doxyfile_py.in
doc/salome/gui/BLSURFPLUGIN/input/: blsurf_hypo.doc  blsurfplugin_python_interface.doc  index.doc
doc/salome/gui/BLSURFPLUGIN/static/: footer.html  header.html.in  header_py.html.in
doc/salome/gui/input/: blsurfplugin_python_interface.doc
doc/salome/gui/static/: footer.html
doc/salome/tui/: CMakeLists.txt  Makefile.am  doxyfile.in
doc/salome/tui/static/: footer.html
idl/: BLSURFPlugin_Algorithm.idl  CMakeLists.txt  Makefile.am  Makefile.in
resources/: BLSURFPlugin.xml  CMakeLists.txt  Makefile.am  SalomeApp.xml
resources/Shapes/Brep/: flight_solid.brep
src/: CMakeLists.txt  Makefile.am  Makefile.in
src/BLSURFPlugin/: BLSURFPluginBuilder.py  BLSURFPluginDC.py  BLSURFPlugin_Attractor.cxx  BLSURFPlugin_Attractor.hxx  BLSURFPlugin_BLSURF.cxx  BLSURFPlugin_BLSURF.hxx  BLSURFPlugin_BLSURF_i.cxx  BLSURFPlugin_BLSURF_i.hxx  BLSURFPlugin_EnforcedMesh1D.cxx  BLSURFPlugin_EnforcedMesh1D.hxx  BLSURFPlugin_Hypothesis.cxx  BLSURFPlugin_Hypothesis.hxx  BLSURFPlugin_Hypothesis_i.cxx  BLSURFPlugin_Hypothesis_i.hxx  BLSURFPlugin_i.cxx  CMakeLists.txt  Makefile.am  Makefile.in  __init__.py  cad_occ.cxx  cad_occ.h
src/GUI/: BLSURFPluginGUI.cxx  BLSURFPluginGUI_AdvWidget.cxx  BLSURFPluginGUI_AdvWidget_QTD.ui  BLSURFPluginGUI_Dlg.h  BLSURFPluginGUI_HypothesisCreator.cxx  BLSURFPluginGUI_HypothesisCreator.h  BLSURFPluginGUI_StdWidget.cxx  BLSURFPluginGUI_StdWidget_QTD.ui  BLSURFPluginGUI_TreeWidget.cxx  BLSURFPluginGUI_TreeWidget.h  BLSURFPlugin_images.po  BLSURFPlugin_images.ts  BLSURFPlugin_msg_en.po  BLSURFPlugin_msg_en.ts  BLSURFPlugin_msg_fr.ts  BLSURFPlugin_msg_ja.ts  CMakeLists.txt  Makefile.am  Makefile.in
src/PluginUtils/: GeomSelectionTools.cxx  GeomSelectionTools.h  Makefile.am  PluginUtils.h
tests/: CMakeLists.txt  CTestTestfileInstall.cmake  Makefile.am  attractor.py  attractor_edge_on_border.py  attractor_point_outside_face.py  enforced_internal_vertex.py  enforced_vertex.py  multithread.py  periodicity_2D_prepro.py  periodicity_prepro.py  periodicity_reflexion_2D_prepro.py  periodicity_reflexion_prepro.py  periodicity_with_points_2D_prepro.py  prepro_intersections.py  prepro_keep_gaps.py  proximity.py  quadrangles.py  quadrangles_gradation.py  remove_tiny_edges.py  sphere.py  test_cadsurf_multithread.py  test_enforced_internal_vertex.py  test_enforced_vertex.py  test_periodicity.py  test_periodicity_2D.py  test_periodicity_2D_precad.py  test_periodicity_precad.py  test_periodicity_reflexion.py  test_periodicity_reflexion_2D.py  test_periodicity_reflexion_2D_precad.py  test_periodicity_reflexion_precad.py  test_periodicity_with_points_2D_precad.py  test_precad_intersections.py  test_precad_keep_gaps.py  test_proximity.py  test_quadrangles_gradation.py  test_remove_tiny_edges.py  test_sphere.py  tests.set
